Fixed css body overflow

--- a/Flappy/styles/flappy.css
+++ b/Flappy/styles/flappy.css
@@ -1,6 +1,7 @@
 ﻿body {
 	width: 960 px;
 	background: #ccc;
+    overflow:hidden;
 }
 
 #container {
